--- a/detailedpost.html
+++ b/detailedpost.html
@@ -39,45 +39,13 @@
               </ul>
             </nav>
           </header>
-          <h1 class="donut-title">The best post ever</h1>
-          <p class="donut-sub-title">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book.
-          </p>
+
+          <div class="detailed-post-intro"></div>
         </div>
         <i class="fas fa-chevron-down"></i>
       </div>
       <div class="container donut-container-overall-content">
-        <div class="donut-container-left">
-          <div class="donut-title-and-info-container">
-            <p class="donut-paragraph">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. Lorem Ipsum is
-              simply dummy text of the printing and typesetting industry. Lorem
-              Ipsum has been the industry's standard dummy text ever since the
-              1500s, when an unknown printer took a galley of type and scrambled
-              it to make a type specimen book.
-            </p>
-            <img src="/img/yayayaya.jpg" class="post-paragraph-image" />
-            <p class="donut-paragraph">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. Lorem Ipsum is
-              simply dummy text of the printing and typesetting industry. Lorem
-              Ipsum has been the industry's standard dummy text ever since the
-              1500s, when an unknown printer took a galley of type and scrambled
-              it to make a type specimen book.
-            </p>
-            <img src="/img/yayayaya.jpg" class="post-paragraph-image" />
-            <div class="donut-container-right"></div>
-          </div>
-          <button class="button">Next post</button>
-        </div>
+        <h1>pOST starts here</h1>
         <footer></footer>
       </div>
     </main>
