--- a/index.html
+++ b/index.html
@@ -42,38 +42,24 @@
               </ul>
             </nav>
           </header>
-          <div class="landing-content">
-            <h2 class="landing-paragraph">
-              Oslo doesn’t have nature you say? </br>In this blog we will show you 10
-              places in Oslo you can get to within 30 minutes
-            </h2>
-            <div landing->
-              <h2 class="the-donut-title">37 Bus to nature heaven</h2>
-              <p class="the-donut-landing-paragraph">
-                The 37 bus has alot of ups and downs, but one of the ups is the
-                beautiful end stop .....
-              </p>
-              <a href="/detailedpost.html"
-                ><button class="button">Read more</button></a
-              >
-            </div>
-          </div>
+
           <!-- <i class="fas fa-chevron-down"></i> -->
         </div>
       </div>
-      <!-- <div class="container">
-        <h2 class="landing-title">Latest posts</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quasi
-          fuga odio eos iusto! Aliquid, explicabo! Officia pariatur delectus
-          voluptas quibusdam ullam reprehenderit aliquam at perferendis corporis
-          laboriosam. Eum, porro.
-        </p>
-        <div class="posts-container"></div>
-        <button class="button" id="load-more-button">More posts</button>
-      </div> -->
+      <div class="container">
+        <div class="carousel-container">
+          <button id="previous-four">
+            <i class="fas fa-chevron-left"></i>
+          </button>
+
+          <div class="carousel-posts-container"></div>
+          <button id="next-four">
+            <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+      </div>
     </main>
   </body>
-  <script src="js/script.js"></script>
-  <script src="js/posts.js"></script>
+  <script src="js/index.js"></script>
+  <!-- <script src="js/posts.js"></script> -->
 </html>
