--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
               </ul>
             </nav>
           </header>
-
-          <!-- <i class="fas fa-chevron-down"></i> -->
         </div>
+        <i class="fas fa-chevron-down"></i>
       </div>
       <div class="container">
         <div class="carousel-container">
