--- a/allposts.html
+++ b/allposts.html
@@ -38,7 +38,7 @@
             </ul>
           </nav>
         </header>
-        <img src="/img/yayayaya.jpg" class="page-image" />
+        <img src="/img/page-img 1.jpg" class="page-image" />
         <h2 class="page-title posts-title">All posts</h2>
         <p class="allposts-paragraph">
           Lorem Ipsum is simply dummy text of the printing and typesetting
