--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         </header>
         <div class="about-container-overall">
           <div class="about-container-right">
-            <img class="page-image" src="img//yayayaya.jpg" />
+            <img class="page-image" src="img//page-img 1.jpg" />
           </div>
           <div class="about-container-left">
             <h2 class="page-title">About</h2>
