--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
               </ul>
             </nav>
           </header>
+          <p class="landing-hero-paragraph">
+            Oslo doesn't have any nature or wildelife you say? I belive most of
+            the critics are wrong, and in this blog I'll show you numerous of
+            beautyspots that you can reach within 30 minutes from Oslo S.
+          </p>
         </div>
         <i class="fas fa-chevron-down"></i>
       </div>
