--- a/allposts.html
+++ b/allposts.html
@@ -62,5 +62,5 @@
     </main>
   </body>
   <script src="js/script.js"></script>
-  <script src="js/posts.js"></script>
+  <script type="module" src="js/allposts.js"></script>
 </html>
