--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     <script
       src="https://kit.fontawesome.com/91d0eac963.js"
       crossorigin="anonymous"
@@ -48,22 +48,21 @@
             beautyspots that you can reach within 30 minutes from Oslo S.
           </p>
         </div>
-        <i class="fas fa-chevron-down"></i>
       </div>
       <div class="container">
+        <h2>Latest posts</h2>
         <div class="carousel-container">
-          <button id="previous-four">
+          <button id="previous-posts">
             <i class="fas fa-chevron-left"></i>
           </button>
-
           <div class="carousel-posts-container"></div>
-          <button id="next-four">
+          <button id="next-posts">
             <i class="fas fa-chevron-right"></i>
           </button>
         </div>
       </div>
     </main>
   </body>
-  <script src="js/index.js"></script>
+  <script type="module" src="/js/index.js"></script>
   <!-- <script src="js/posts.js"></script> -->
 </html>
