--- a/allposts.html
+++ b/allposts.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Ett kvarter til marka" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/allposts.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/allposts.css" />
     <script
       src="https://kit.fontawesome.com/91d0eac963.js"
       crossorigin="anonymous"
     ></script>
     <title>Ett kvarter til marka | Posts</title>
+    <!-- Hotjar Tracking Code for https://modest-curran-5b1025.netlify.app/ -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2426337, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <main>
