--- a/about.html
+++ b/about.html
@@ -48,9 +48,6 @@
               <li class="active-nav-title">
                 <a href="about.html">About</a>
               </li>
-              <li>
-                <a href="index.html">Search</a>
-              </li>
             </ul>
           </nav>
         </header>
@@ -83,7 +80,7 @@
               in! Dolore nesciunt incidunt omnis!
             </p>
           </div>
-          <button class="button">Back home</button>
+          <a href="/index.html"> <button class="button">Back home</button></a>
         </div>
         <footer></footer>
       </div>
