--- a/index.html
+++ b/index.html
@@ -52,17 +52,19 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                <li>
-                  <a href="index.html">Search</a>
-                </li>
               </ul>
             </nav>
           </header>
-          <p class="landing-hero-paragraph">
-            Oslo doesn't have any nature or wildelife you say? I belive most of
-            the critics are wrong, and in this blog I'll show you numerous of
-            beautyspots that you can reach within 30 minutes from Oslo S.
-          </p>
+          <div class="landing-paragraph-container">
+            <h2 class="landing-title-paragraph">
+              Oslo doesn't have any nature or wildelife you say?
+            </h2>
+            <p class="landing-hero-paragraph">
+              I belive the critics are wrong, and in this blog I'll show you
+              numerous of beautyspots that you can reach within 30 minutes from
+              Oslo S.
+            </p>
+          </div>
         </div>
       </div>
       <div class="container">
