correct contact img

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             </ul>
           </nav>
         </header>
-        <img class="page-image" src="img//yayayaya.jpg" />
+        <img class="page-image" src="img//page-img.jpg" />
         <div class="contact-container-overall">
           <div class="contact-container-left">
             <h2 class="page-title">Contact</h2>
