--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </header>
           <div class="landing-paragraph-container">
             <h2 class="landing-title-paragraph">
-              Oslo doesn't have any nature or wildelife you say?
+              Oslo doesn't have any nature or wildlife they say?
             </h2>
             <p class="landing-hero-paragraph">
               I belive the critics are wrong, and in this blog I'll show you
