styling and cleaning css

--- a/allposts.html
+++ b/allposts.html
@@ -66,14 +66,12 @@
           unchanged. It has survived not only five centuries, but also the leap
           into electronic typesetting, remaining essentially unchanged.
         </p>
-        <div class="news-card-container">
-          <div class="posts-container"></div>
-        </div>
+        <div class="posts-container"></div>
         <button class="button" id="load-more-button">Older posts</button>
       </div>
       <footer></footer>
     </main>
   </body>
   <script src="js/script.js"></script>
-  <script type="module" src="js/allposts.js"></script>
+  <script type="module" src="/js/allposts.js"></script>
 </html>
