font size on carousel

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="container">
-        <h2>Latest posts</h2>
+        <h2 class="latest-posts-title">Latest posts</h2>
         <div class="carousel-container">
           <button id="previous-posts">
             <i class="fas fa-chevron-left"></i>
