--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Ett kvarter til marka" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/about.css" />
     <script
       src="https://kit.fontawesome.com/91d0eac963.js"
       crossorigin="anonymous"
@@ -86,5 +86,5 @@
       </div>
     </main>
   </body>
-  <script src="js/script.js"></script>
+  <script src="/js/script.js"></script>
 </html>
