--- a/allposts.html
+++ b/allposts.html
@@ -72,6 +72,6 @@
       <footer></footer>
     </main>
   </body>
-  <script src="js/script.js"></script>
+  <script src="/js/script.js"></script>
   <script type="module" src="/js/allposts.js"></script>
 </html>
