--- a/index.html
+++ b/index.html
@@ -82,5 +82,5 @@
     </main>
   </body>
   <script type="module" src="/js/index.js"></script>
-  <!-- <script src="js/posts.js"></script> -->
+  <!-- <script src="/js/posts.js"></script> -->
 </html>
